<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:id="@+id/main"
    android:layout_height="match_parent">

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical">




    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:textColor="@android:color/black"
        android:background="@color/teal"
        android:gravity="center"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="16dp"
        android:textSize="32sp"
        android:text="@string/wisata"
        />



    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp">

      <TableRow
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginBottom="8dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:layout_marginEnd="16dp"
            android:text="@string/linggarjati" />

      </TableRow>
      <ImageView
          android:layout_width="300dp"
          android:layout_height="200dp"
          android:layout_gravity="center"
          android:src="@drawable/linggarjati"></ImageView>



      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="10dp"
          android:textSize="14sp"
          android:layout_marginEnd="16dp"
          android:text="@string/text"></TextView>

    </TableLayout>
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp">

      <TableRow
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginBottom="8dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:layout_marginEnd="16dp"
            android:text="@string/cipari" />

      </TableRow>
      <ImageView
          android:layout_width="300dp"
          android:layout_height="200dp"
          android:layout_gravity="center"
          android:src="@drawable/tamanp"></ImageView>



      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="10dp"
          android:textSize="14sp"
          android:layout_marginEnd="16dp"
          android:text="@string/text2" />

    </TableLayout>


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp">

      <TableRow
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginBottom="8dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:layout_marginEnd="16dp"
            android:text="@string/cibulan" />

      </TableRow>
      <ImageView
          android:layout_width="300dp"
          android:layout_height="200dp"
          android:layout_gravity="center"
          android:src="@drawable/th"></ImageView>



      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="10dp"
          android:textSize="14sp"
          android:layout_marginEnd="16dp"
          android:text="@string/text3"></TextView>
    </TableLayout>





  </LinearLayout>
</ScrollView>
